# QuantRAGForge

./: .gitignore  CLAUDE.md  LICENSE  PLAN.md  README.md  _code_math.py  _pdf_extract.py  _web_extract.py  _wechat.py  agent_cli.py  brainstorm_from_kb.py  embed_knowledge_base.py  enrich_articles_with_llm.py  ingest_source.py  ingest_wechat_article.py  kb.py  kb_shared.py  llm_config.example.env  pyproject.toml  requirements.txt  rethink_layer.py  sync_articles_by_status.py  wiki_compile.py  wiki_compile_llm.py  wiki_index.py  wiki_lint.py  wiki_maintain.py  wiki_schemas.py  wiki_seed.py  wiki_state.py
agent/: graph.py  prompts.py  tools.py
docs/: Why Karpathy’s Second Brain Breaks.txt  brainstorm-cli-usage.md  brainstorm-output-spec.md  embed-knowledge-base-usage.md  ingest-script-usage.md  ingestion-workflow.md  llm-enrichment-usage.md  metadata-schema.md
quant_llm_wiki/: cli.py  embed.py  enrich.py  shared.py  sync.py
schema/: concept-schema.md  operations.md  source-schema.md  wiki-structure.md
templates/: research-note-template.md  strategy-note-template.md
tests/: test_agent_graph.py  test_agent_tools.py  test_brainstorm.py  test_brainstorm_from_kb.py  test_brainstorm_with_wiki.py  test_build_catalog.py  test_code_math.py  test_embed.py  test_embed_knowledge_base.py  test_enrich.py  test_enrich_articles_with_llm.py  test_ingest_source.py  test_ingest_wechat.py  test_ingest_wechat_article.py  test_kb_cli.py  test_pdf_extract.py  test_query_wiki_first_ask.py  test_rethink.py  test_rethink_layer.py  test_sync_articles_by_status.py  test_web_extract.py  (+9 more)
(+23 files in other folders)
